# towncrier-config

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: changelog.yml  check-changelog.yml
docs/changes/: 3.breaking.rst
